# sickle

./: .gitignore  LICENSE  Makefile  Makefile.am  README.md  bootstrap  configure.ac  foo  sickle.xml
galaxy/: sickle.xml  tool_dependencies.xml
galaxy/test-data/: output.c1.fastq  output.c2.fastq  output.f.fastq  output.r.fastq  output.s.fastq  test.f.fastq  test.fastq  test.r.fastq
src/: Makefile.am  kseq.h  print_record.c  print_record.h  sickle.c  sickle.h  sliding.c  tmp  trim_paired.c  trim_single.c  vector.c
test/: Makefile.am  N-handling.fastq  N-handling.t  Orp  R1.fastq  R2.fastq  Tast  cpanfile  segfault-on-empty-reads-1.fastq  segfault-on-empty-reads-2.fastq  segfault-on-empty-reads.sh  sickle-pe-memcheck.sh  sickle-pe-success.sh  sickle-se-memcheck.sh  sickle-se-success.sh  test-pe-success.sh  test-se-success.sh  test.f.fastq  test.fastq  test.r.fastq
test/lib/Sickle/: Test.pm
